--- a/DESAFIOS/Projeto Cordel/estilo/style.css
+++ b/DESAFIOS/Projeto Cordel/estilo/style.css
@@ -1,11 +1,26 @@
 @charset "UTF-8";
 
-body {
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+  :root {
+    --fonte1:Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2:'Passion One', cursive;
+    --fonte3:'Sriracha', cursive;
+   
+  }
+
+* {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
+    
 }
 
 html, body {
+    font-family: var(--fonte1);
     min-height: 100vh; /*Minimo da altura  obs: Se fosse Width seria largura**/
     background-color: rgb(255, 255, 255);
 }
@@ -18,9 +33,11 @@ header {
 }
 
 header > h1 {
+    font-family: var(--fonte2);
     padding-top: 50px; /*espaçaento*/
     /*text-transform: uppercase;  Colocar tudo em maiscula*/
     font-variant: small-caps; /*Colocar tudo em maiscula*/
+    font-size: 4em;
 }
 
 header > p {
@@ -42,6 +59,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em; /*Espaçamento duplo nas frases*/
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 2.5vw; /* Para ajustar a largura quando diminui a tela, lembrando que vw é largura*/
 
 }
 
@@ -56,7 +75,7 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block; /*Se adapta ao tamanho do cunteúdo, no caso do paragrafo <p>*/
     background-color: #000000;
     padding: 5px;
     
