--- a/DESAFIOS/Projeto Cordel/estilo/style.css
+++ b/DESAFIOS/Projeto Cordel/estilo/style.css
@@ -64,6 +64,10 @@ section {
 
 }
 
+section > p {
+    padding-bottom: 2em; /*Dá um espaço no section, no texto*/
+}
+
 section.normal {
     background-color: #ffffff;
     color: rgb(0, 0, 0);
@@ -72,14 +76,34 @@ section.normal {
 section.imagem {
     background-color: #353535;
     color: white;
+    box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.637);
+    background-attachment: fixed;
+    
 }
 
 section.imagem > p {
     display: inline-block; /*Se adapta ao tamanho do cunteúdo, no caso do paragrafo <p>*/
-    background-color: #000000;
+    background-color: hsla(0, 0%, 0%, 0.253);
     padding: 5px;
-    
+    text-shadow: 1px 1px 0px black;
+
+        
 }
+
+section#img01 {
+    background-image: url('../img/background001.jpg');
+    background-position: right center;
+    background-size: cover;  
+
+        
+}
+
+section#img02 {
+    background-image: url('../img/background002.jpg');
+    background-position: right center;
+    background-size: cover; 
+}
+    
 
 footer {
     background-color: black;
